# daily-sketch

./: .env.example  .gitignore  .secrets.baseline  Makefile  README.md  docker-compose.staging.yml  docker-compose.yml  railway.toml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: health.py  moderation.py
backend/app/auth/: __init__.py  deps.py  jwt.py  local_dev.py
backend/app/core/: logging.py  pagination.py  rate_limit.py  redaction.py  request_limits.py  settings.py
backend/app/data/: prompt_words.txt
backend/app/db/: session.py
backend/app/jobs/: account_deletion.py  deleted_media_cleanup.py  idempotency_cleanup.py  missing_prompt_check.py  runner.py  sketch_session_cleanup.py  upload_cleanup.py
backend/app/models/: __init__.py  daily_prompt.py  enums.py  idempotency_key.py  moderation_action.py  report.py  sketch_session.py  sketch_session_event.py  user.py  user_block.py  user_preferences.py
backend/app/observability/: __init__.py  metrics.py
backend/app/repositories/: blocks.py  idempotency.py  likes.py  (+8 more)
backend/migrations/: env.py
backend/scripts/: new_migration.sh  start.sh
backend/tests/: fake_storage.py  jwt_helpers.py  test_descope_verifier.py  test_feed.py  test_health.py  test_health_contract.py  test_image_processing_unit.py  test_jwt.py  test_local_dev_jwt.py  test_me.py  test_moderation_phase11.py  test_pagination.py  test_phase13.py  test_prompt_seed_unit.py  test_prompts.py  test_request_id.py  test_safety_phase11.py  test_settings.py  test_sketch_sessions.py  test_uploads_submissions.py
(+209 files in other folders)
